# Person-of-Interest-2

./: .gitignore  PersonOfInterest.py  README.md  __init__.py  backend.py  notes.txt  person-of-interest.py  preprocess.py  pyproject.toml  requirements.txt
backend/: PersonOfInterest.py  __init__.py  backend.py
poimobile/: README.md  pubspec.yaml
poimobile/android/app/: build.gradle.kts
poimobile/android/app/src/main/: AndroidManifest.xml
poimobile/android/app/src/main/kotlin/com/example/poimobile/: MainActivity.kt
poimobile/ios/Runner/: Info.plist
poimobile/ios/Runner.xcodeproj/: project.pbxproj
poimobile/lib/: main.dart
poimobile/linux/: CMakeLists.txt
poimobile/linux/runner/: my_application.cc
poimobile/macos/Runner.xcodeproj/: project.pbxproj
poimobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
poimobile/macos/Runner/Configs/: AppInfo.xcconfig
poimobile/test/: widget_test.dart
poimobile/web/: index.html  manifest.json
poimobile/windows/: CMakeLists.txt
poimobile/windows/runner/: Runner.rc  main.cpp
